# aionotion

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  Makefile  Pipfile  README.md  example.py  pyproject.toml  setup.py  vulture_whitelist.py
.github/: pull_request_template.md
.github/workflows/: ci.yaml  test.yml
aionotion/: __init__.py  bridge.py  client.py  const.py  device.py  errors.py  sensor.py  system.py  task.py
aionotion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aionotion/bridge/: __init__.py  models.py
aionotion/device/: __init__.py  models.py
aionotion/helpers/: model.py  typing.py
aionotion/listener/: __init__.py  models.py
aionotion/sensor/: __init__.py  models.py
aionotion/system/: __init__.py  models.py
aionotion/user/: __init__.py  models.py
aionotion/util/: auth.py  dt.py
examples/: test_api.py
script/: test
tests/: common.py  conftest.py  const.py  test_api.py  test_bridge.py  test_client.py  test_device.py  test_listener.py  test_sensor.py  test_system.py  test_task.py  test_user.py
tests/fixtures/: __init__.py  api.py  auth_credentials_success_response.json  auth_failure_response.json  auth_legacy_credentials_success_response.json  auth_refresh_token_success_response.json  auth_success_response.json  bad_api_response.json  bridge.py  bridge_all_response.json  bridge_create_response.json  bridge_get_response.json  bridge_update_response.json  device.py  device_all_response.json  device_get_response.json  listener_definitions_response.json  sensor.py  sensor_all_response.json  sensor_create_response.json  sensor_get_response.json  sensor_listeners.json  sensor_listeners_response.json  sensor_update_response.json  surface_types_response.json  system.py  system_all_response.json  task.py  (+9 more)
(+1 files in other folders)
