[tool.poetry]
name = "aionotion"
version = "2.0.0"
description = "A simple Python 3 library for Notion Home Monitoring"
readme = "README.md"
authors = ["Aaron Bach <bachya1208@gmail.com>"]
license = "MIT"
repository = "https://github.com/bachya/aionotion"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
python = "^3.6.0"

[tool.poetry.dev-dependencies]
aresponses = "^1.1.1"
flake8 = "^3.7.9"
mypy = "^0.740"
pre-commit = "^1.20.0"
pydocstyle = "^4.0.1"
pylint = "^2.4.3"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^2.8.1"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38, cov, lint, typing
skip_missing_interpreters = True
skipsdist=True
whitelist_externals=
    flake8
    make
    mypy
    poetry
    py.test
    pydocstyle
    pylint

[testenv]
commands=
    poetry install
    py.test

[testenv:cov]
commands=
    poetry install
    py.test -s --verbose --cov-report term-missing --cov-report xml --cov=aionotion tests

[testenv:lint]
commands=
    poetry install
    flake8 aionotion
    pydocstyle aionotion
    pylint aionotion

[testenv:typing]
commands=
    poetry install
    mypy --ignore-missing-imports aionotion
"""

[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
